# Wasserstein

./: .git-blame-ignore-revs  CMakeLists.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-wheels.yml  ci.yml
boost/config/platform/: amigaos.hpp  beos.hpp
scripts/: install-libomp-macos.sh
