[build-system]

requires = [
	"setuptools>=42",
	"wheel>=0.36",
	"oldest-supported-numpy",
	"swig"]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]

skip = "pp* *musllinux*"
test-skip = "*i686 *win32 *-macosx_arm64"

# Unnecessary, see: Action/Tests #38 Install Python packages Line 1
#before-test = "pip install cython; pip install --extra-index-url https://test.pypi.org/simple energyflow==1.3.3a0"
test-command = "pytest {package}"
test-requires = ["pytest", "numpy", "pot", "energyflow"]

[tool.cibuildwheel.macos]

archs = "x86_64 arm64"
