[build-system]
requires = [
	"setuptools>=42",
	"wheel>=0.36",
	"oldest-supported-numpy",
	"swig"]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp* *musllinux*"
test-skip = "*i686 *win32 *-macosx_arm64"

test-command = "pytest {package}"
test-requires = ["pytest", "numpy", "pot", "energyflow"]
