[build-system]
requires = [
    "scikit-build-core",
    "oldest-supported-numpy; python_version < '3.9'",
    "numpy>=2.0.0; python_version >= '3.9'",
]
build-backend = "scikit_build_core.build"


[tool.cibuildwheel]
skip = "pp* *musllinux*"
test-skip = "*i686 *win32 *-macosx_arm64"
before-test = "pip install cython; pip install git+https://github.com/thaler-lab/EnergyFlow.git"
test-command = "pytest {package}"
test-requires = ["pytest", "numpy", "pot", "energyflow"]

#FIXME delete with closure of https://github.com/thaler-lab/Wasserstein/issues/13
[tool.cibuildwheel.macos]
archs = "x86_64 arm64"
